<resources>

    <!-- Strings related to home -->
    <string name="app_name">MaraicherMobile</string>
    <string name="titleActivityConfig">ConfigActivity</string>

    <!-- Strings related to login -->
    <string name="titleHome">Veuillez vous connecter</string>
    <string name="login_failed">Erreur de connexion</string>
    <string name="hintPassword">Mot de passe</string>
    <string name="hintLogin">Nom utilisateur</string>
    <string name="connexion">Se connecter</string>
    <string name="newAccount">Nouveau</string>

    <!-- Strings related to settings -->
    <string name="titleSettings">Paramètres</string>
    <string name="TextChoiceLanguage">Choisissez la langue : </string>
    <string name="content_ArrowBack">Une flèche</string>
    <string name="SaveButton">Enregistrer</string>

    <!-- Strings related to Maraicher -->
    <string name="titleMaraicher">Bienvenue sur MaraicherMobile</string>
    <string name="imgMaraicher">Une image</string>
    <string name="add">Ajouter</string>
    <string name="previous">précédent</string>
    <string name="next">suivant</string>
    <string name="unitPriceText">Prix unitaire :</string>
    <string name="product">Produit : </string>
    <string name="stockProduct">Quantité stock :</string>
    <string name="titleCaddie">Panier :</string>
    <string name="total">Total :</string>
    <string name="deleteAllButton">Annuler</string>
    <string name="deleteButton">Supprimer</string>
    <string name="confirmButton">Confirmer</string>
    <string name="disconnectButton">Se déconnecter</string>
    <string name="Confirm_Success">La commande a bien été enregistrée.</string>
    <string name="choiceQuantity">Choississez une quantité</string>
    <string name="quantity">Quantité :</string>

    <!-- Strings related to Errors -->
    <string name="login">LOGIN :</string>
    <string name="isfailed">isFailed</string>
    <string name="exception">exception</string>
    <string name="error">ERREUR :</string>
    <string name="unknown_error">ERREUR INCONNUE :</string>
    <string name="error_format">ERREUR FORMAT :</string>
    <string name="refresh_article">ACTUALISATION ARTICLE :</string>
    <string name="error_previous_button">BOUTON PRECEDENT :</string>
    <string name="refresh_caddie">ACTUALISATION CADDIE :</string>
    <string name="sendachat_buy">SENDACHAT ACHAT :</string>
    <string name="confirm">BOUTON CONFIRMER :</string>
    <string name="delete_button">BOUTON SUPPRIMER :</string>
    <string name="deleteall_caddie_button">BOUTON VIDER CADDIE :</string>

</resources>