<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MaraicherActivity"
    android:background="@color/material_dynamic_neutral50">

    <TextView
        android:id="@+id/titleMaraicher"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/titleMaraicher"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <!-- SHOP PANEL -->

    <!-- BUY PANEL -->

    <!-- BASKET PANEL -->
    <RelativeLayout
        android:id="@+id/shopPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleMaraicher"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <!-- Image -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="20dp"
            android:importantForAccessibility="no"
            android:src="@drawable/arrowback" />

        <Button
            android:id="@+id/previousButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/previous"
            android:textColor="@color/white"
            android:textSize="8sp" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:layout_marginStart="100dp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="8sp" />

        <Button
            android:id="@+id/addCaddieButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/previousButton"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <EditText
            android:id="@+id/quantityEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/previousButton"
            android:layout_marginStart="130dp"
            android:importantForAutofill="no"
            android:gravity="center"
            android:inputType="number"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:orientation="horizontal"
            android:text="0" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/previousButton"
            android:layout_marginStart="240dp"
            android:text="@string/deleteButton"
            android:textSize="10sp"
            android:textColor="@color/white" />

        <!-- Details -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_toEndOf="@+id/imageView"
            android:orientation="vertical">

            <TextView
                android:id="@+id/articleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/articleListView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:text="@string/fruitsName"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/priceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unitPriceText"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/priceListView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:text="@string/fruitsPrice"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/stockTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stockProduct"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/stockListView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:text="@string/fruitsStock"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/basketPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/shopPanel">

        <TextView
            android:id="@+id/titleCaddie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/titleCaddie"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:importantForAutofill="no" />

        <ListView
            android:id="@+id/caddieListView"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginBottom="20dp"
            android:contextClickable="true" />

        <TextView
            android:id="@+id/totalTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/caddieListView"
            android:layout_marginStart="250dp"
            android:layout_marginTop="10dp"
            android:text="@string/total"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/totalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/caddieListView"
            android:layout_marginStart="300dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="0"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/deleteAllButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/caddieListView"
            android:text="@string/deleteAllButton"
            android:layout_marginBottom="15dp"
            android:textSize="10sp"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/deleteAllButton"
            android:layout_centerHorizontal="true"
            android:text="@string/confirmButton"
            android:textSize="12sp"
            android:textColor="@color/white"/>

        <ImageView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:layout_below="@id/confirmButton"
            android:importantForAccessibility="no"
            android:layout_marginStart="10dp"
            android:onClick="openSettings"
            android:src="@drawable/ic_settings"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/disconnectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirmButton"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:minHeight="48dp"
            android:onClick="disconnect"
            android:text="@string/disconnectButton"
            android:textColor="@color/white"
            android:textSize="10sp" />

    </RelativeLayout>

</RelativeLayout>
