<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".settings.SettingsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/titleSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/titleSettings"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/ChoiceLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_centerVertical="true"
        android:text="@string/TextChoiceLanguage"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/ChoiceIpView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ChoiceLanguage"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="Ip : "
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/ChoicePortView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ChoiceIpView"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="Port : "
        android:textColor="@color/white"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/ChoiceIp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="100dp"
        android:layout_below="@id/ChoiceLanguage"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/ChoicePort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="100dp"
        android:layout_below="@id/ChoiceIpView"
        android:textColor="@color/white" />

    <Spinner
        android:id="@+id/languageSpinner"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="220dp"
        android:entries="@array/language_options"
        android:minHeight="60dp" />
    />

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="30dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/content_ArrowBack"
        android:src="@drawable/arrowback" />

</RelativeLayout>